major project setting tweaks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">sprintly_app_smd_finale</string>
+    <string name="app_name">Sprintly</string>
     <string name="sprintly_head">Sprintly</string>
 </resources>
